# ai_trending

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  coverage.xml  docker-compose.yml  pyproject.toml  run.py
.github/: PULL_REQUEST_TEMPLATE.md  badges.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  daily-run.yml  release.yml  tests.yml
doc/: ai-trending-requirements.md  blog.md  improvement-tasks.md  tech-debt-analysis.md
docs/: API.md  README.md  ai-trending-requirements.md  claude-code-inspired-optimizations.md  implementation_guide.md  optimization_summary.md
examples/: optimized_daily_report_example.md
knowledge/: user_preference.txt
openspec/changes/archive/2026-04-16-enhance-data-richness/: proposal.md  tasks.md
openspec/changes/archive/2026-04-16-fix-report-quality-bugs/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-16-report-narrative-enhancement/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-18-report-reader-experience/: tasks.md
openspec/changes/archive/2026-04-18-report-signal-enrichment/: design.md  tasks.md
openspec/changes/archive/2026-04-20-news-tag-cleanup/: design.md  proposal.md  tasks.md
openspec/changes/enhance-data-richness/: design.md  tasks.md
openspec/changes/enhance-data-richness/specs/star-growth-enrichment/: spec.md
openspec/changes/report-reader-experience/: design.md  proposal.md  tasks.md
openspec/changes/report-reader-experience/specs/trend-scoring-narrative/: spec.md
openspec/changes/report-signal-enrichment/: proposal.md  tasks.md
openspec/specs/github-readme-fetch/: spec.md
openspec/specs/kill-list-enforcement/: spec.md
openspec/specs/news-repo-resonance/: spec.md
openspec/specs/news-tag-format/: spec.md
openspec/specs/repo-lifecycle-tagging/: spec.md
openspec/specs/report-previous-verification/: spec.md
openspec/specs/report-quality-badge/: spec.md
openspec/specs/report-template-selector/: spec.md
openspec/specs/trend-scoring-narrative/: spec.md
output/: DECISION_MEMORY.md  STYLE_MEMORY.md  TOPIC_TRACKER.md  wechat_2026-03-17.html  wechat_2026-03-18.html  wechat_2026-03-19.html  wechat_2026-03-23.html  wechat_2026-03-24.html  wechat_2026-03-25.html  wechat_2026-03-26.html  wechat_2026-03-27.html  wechat_2026-03-30.html  wechat_2026-03-31.html  wechat_2026-04-02.html  wechat_2026-04-04.html  wechat_2026-04-06.html  wechat_2026-04-07.html  wechat_2026-04-08.html  wechat_2026-04-09.html  wechat_2026-04-10.html  wechat_2026-04-11.html  wechat_2026-04-12.html  wechat_2026-04-13.html  wechat_2026-04-14.html  wechat_2026-04-15.html  wechat_2026-04-16.html  wechat_2026-04-17.html  wechat_2026-04-18.html  wechat_2026-04-19.html  wechat_2026-04-20.html  wechat_2026-04-21.html  wechat_2026-04-22.html  wechat_2026-04-23.html  wechat_2026-04-24.html  wechat_2026-04-25.html  wechat_2026-04-26.html  wechat_2026-04-27.html  wechat_2026-04-28.html  wechat_2026-04-29.html  wechat_2026-04-30.html  (+18 more)
output/dedup_cache/: github_repos.json  news_urls.json
output/star_snapshots/: 2026-04-01.json  2026-04-02.json  2026-04-04.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  (+6 more)
reports/: 2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-27.md  2026-03-30.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-04.md  2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-04-29.md  2026-04-30.md  2026-05-01.md  2026-05-02.md  (+16 more)
src/ai_trending/: config.py  crew.py  graph.py  llm_client.py  logger.py  main.py  metrics.py  nodes.py  retry.py
src/ai_trending/config/: agents.yaml  tasks.yaml
src/ai_trending/crew/: __init__.py
src/ai_trending/crew/editorial_planning/: __init__.py  crew.py  models.py  tools.py
src/ai_trending/crew/github_trending/: __init__.py  crew.py  fetchers.py  formatter.py  models.py  ranker.py  star_tracker.py  utils.py
src/ai_trending/crew/new_collect/: __init__.py  content_extractor.py  crew.py  fetchers.py  models.py
src/ai_trending/crew/quality_review/: __init__.py  crew.py  models.py
src/ai_trending/crew/report_writing/: __init__.py  crew.py  decision_memory.py  models.py  style_memory.py  topic_tracker.py  tracker.py
src/ai_trending/crew/trend_scoring/: __init__.py  crew.py  models.py
src/ai_trending/crew/util/: __init__.py  dedup_cache.py
src/ai_trending/tools/: __init__.py  ai_news_tool.py  dedup_cache.py  github_publish_tool.py  github_trending_tool.py  wechat_article_tool.py  wechat_draft_tool.py  wechat_publish_tool.py
tests/: conftest.py  test_ai_news_tool.py  test_dedup_cache.py  test_github_publish_tool.py  test_github_trending_tool.py  test_optimized_report_generation.py  test_wechat_article_tool.py  test_wechat_draft_tool.py
tests/unit/crew/: test_content_extractor.py  test_editorial_planning.py  test_github_fetcher.py  test_previous_report_tracker.py  test_quality_review.py  test_report_writing.py  test_rich_data_models.py  test_star_tracker.py  test_style_memory.py  test_topic_tracker.py  test_trend_scoring.py  test_writing_brief.py
tests/unit/nodes/: test_nodes.py
(+25 files in other folders)
