[project]
name = "ai_trending"
version = "0.1.0"
description = "每日 AI 开源项目与新闻聚合报告系统 — 基于 CrewAI 多 Agent 协作"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.10.1",
    "litellm>=1.80.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ai_trending = "ai_trending.main:run"
run_crew = "ai_trending.main:run"
train = "ai_trending.main:train"
replay = "ai_trending.main:replay"
test = "ai_trending.main:test"
run_with_trigger = "ai_trending.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
